@@ -1,6 +1,8 @@
 * Fixed battery selection if battery detached but another is available.
 * Fixed battery percentage calculations if charge isn't available but
     energy is, it appears broken in 0.9.0.
+* Fixed wrong state change on task button when hovered, it shouldn't
+    receive selected state until window has urgency.
 
 0.9.1
 -------------------------------------------------------------------------
